# zephyr-simple-driver-toggleled

./: Build and flash Commands.txt  CMakeLists.txt  Kconfig  README.md  build commands.txt  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/: Toggle.overlay
app/src/: main.c
drivers/: Kconfig
drivers/toggledriver/: CMakeLists.txt  Kconfig  Toggledriver.c  Toggledriver.h
dts/bindings/: toggle.yaml  zephyr,toggle.yaml
include/: Toggledriver.h
zephyr/: module.yml
